--- a/Moon Skynet/.project
+++ b/Moon Skynet/.project
@@ -14,4 +14,11 @@
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>src/mx/uam/skynet/app/presentacion/img/GuiadeuTerminado.pdf</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/Documents/GuiadeuTerminado.pdf</locationURI>
+		</link>
+	</linkedResources>
 </projectDescription>
